# md2notion

./: .env.example  .gitignore  README.md  import_md_to_notion.py  notion-md-sync  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml
docs/: 运行步骤.md
markdown/ai/: agent.md  prompt.md
markdown/startup/: growth.md  idea.md
notion_md_sync/: __init__.py  cli.py  fallback_blocks.py  self_manage.py  sync.py
scripts/: build_release.sh  install.sh  uninstall.sh
